@layout: web toolkit scrollbar problem solved

--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -25,6 +25,27 @@
         display: flex;
         justify-content: center;
         height: calc(100vh - 9.5rem);
-        overflow: scroll;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        /* width */
+        &::-webkit-scrollbar {
+          width: 12px;
+        }
+
+        /* Track */
+        &::-webkit-scrollbar-track {
+          background: transparent; 
+        }
+
+        /* Handle */
+        &::-webkit-scrollbar-thumb {
+          background: #888; 
+        }
+
+        /* Handle on hover */
+        &::-webkit-scrollbar-thumb:hover {
+          background: #555; 
+        }
+        
     }
 }
